--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     build: .
     volumes:
       - ./:/go/src/app/
-    command: go run /go/src/app/moveWebsocet.go
+    command: go run /go/src/app/main.go
     ports:
       - 8181:8181
     tty: true
